RESOLVED FIXED44313
[chromium] fix a null pointer crash when dispatching JS keyboard events
https://bugs.webkit.org/show_bug.cgi?id=44313
Summary [chromium] fix a null pointer crash when dispatching JS keyboard events
Tony Chang
Reported 2010-08-19 17:01:14 PDT
[chromium] fix a null pointer crash when dispatching JS keyboard events
Attachments
Patch (3.43 KB, patch)
2010-08-19 17:01 PDT, Tony Chang
tkent: review+
Tony Chang
Comment 1 2010-08-19 17:01:45 PDT
Kent Tamura
Comment 2 2010-08-19 19:38:45 PDT
Comment on attachment 64911 [details] Patch ok.
Tony Chang
Comment 3 2010-08-20 12:03:03 PDT
Note You need to log in before you can comment on or make changes to this bug.