2010-08-20  Tony Chang  <tony@chromium.org>

Reviewed by Kent Tamura.

        [chromium] fix a null pointer crash when dispatching JS keyboard events
        https://bugs.webkit.org/show_bug.cgi?id=44313

        * fast/events/initkeyboardevent-crash-expected.txt: Added.
        * fast/events/initkeyboardevent-crash.html: Added.
2010-08-20  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] fix a null pointer crash when dispatching JS keyboard events
        https://bugs.webkit.org/show_bug.cgi?id=44313

        * src/WebInputEventConversion.cpp:
        (WebKit::WebKeyboardEventBuilder::WebKeyboardEventBuilder):

Canonical link: https://commits.webkit.org/56527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65747 268f45cc-cd09-0410-ab3c-d52691b4dbfc